// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Aang, Hope's Avatar // Aang, Master of Elements on m15 1`] = `
{
  "cardName": "Aang, Hope's Avatar // Aang, Master of Elements",
  "patch": {
    "artist_credit": "Jesper Ejsing",
    "back_face": {
      "artist_credit": "Jesper Ejsing",
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying, hexproof
At the beginning of your upkeep, transform this creature.",
      "subtypes_text": "Avatar",
      "supertype": "Legendary",
      "title": "Aang, Master of Elements",
      "toughness": "6",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "203",
      "lang": "en",
      "set_code": "TLA",
    },
    "color_identity": [
      "multicolor",
    ],
    "color_pair": undefined,
    "cost": "{W}{U}{B}{R}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.11",
      "exactLabel": "Double-faced card with a colourless face",
      "landOn": "m15",
      "reason": "a colourless double-faced face without the Artifact word prints the see-through frame, which PipGlyph doesn't draw yet",
      "signature": "dfc/colourless-face",
      "status": "nearest",
      "template": "m15dfcfront",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "203",
      "full_art": false,
      "set": "tla",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "mythic",
    "rules_text": "Flying
When this creature enters, you may transform it.",
    "source_scryfall_id": "e5e5e5e5-0005-4005-8005-000000000005",
    "subtypes_text": "Human, Avatar",
    "supertype": "Legendary",
    "title": "Aang, Hope's Avatar",
    "toughness": "4",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Jesper Ejsing",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Jesper Ejsing",
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying, hexproof
At the beginning of your upkeep, transform this creature.",
      "subtypes": [
        "Avatar",
      ],
      "supertype": "Legendary",
      "title": "Aang, Master of Elements",
      "toughness": "6",
    },
    "cardType": "creature",
    "colorIdentity": [
      "multicolor",
    ],
    "cost": "{W}{U}{B}{R}{G}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "mythic",
    "rulesText": "Flying
When this creature enters, you may transform it.",
    "subtypes": [
      "Human",
      "Avatar",
    ],
    "supertype": "Legendary",
    "title": "Aang, Hope's Avatar",
    "toughness": "4",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/e/5/e5e5e5e5-0005-4005-8005-000000000005.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Agadeem's Awakening // Agadeem, the Undercrypt on m15 1`] = `
{
  "cardName": "Agadeem's Awakening // Agadeem, the Undercrypt",
  "patch": {
    "artist_credit": "Alayna Danner",
    "back_face": {
      "artist_credit": "Alayna Danner",
      "card_type": "land",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "As Agadeem, the Undercrypt enters, you may pay 3 life. If you don't, it enters tapped.
{T}: Add {B}.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Agadeem, the Undercrypt",
      "toughness": undefined,
    },
    "card_type": "sorcery",
    "collector": {
      "collector_number": "90",
      "lang": "en",
      "set_code": "ZNR",
    },
    "color_identity": [
      "black",
    ],
    "color_pair": undefined,
    "cost": "{X}{B}{B}{B}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.1b",
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": "PipGlyph's modal double-faced frames aren't built yet",
      "signature": "modal/2015/pending",
      "status": "nearest",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "sorcery",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "90",
      "full_art": false,
      "set": "znr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "mythic",
    "rules_text": "Return from your graveyard to the battlefield any number of target creature cards that each have a different mana value X or less.",
    "source_scryfall_id": "d4d4d4d4-0004-4004-8004-000000000004",
    "subtypes_text": undefined,
    "supertype": undefined,
    "title": "Agadeem's Awakening",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Alayna Danner",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Alayna Danner",
      "card_type": "land",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "As Agadeem, the Undercrypt enters, you may pay 3 life. If you don't, it enters tapped.
{T}: Add {B}.",
      "subtypes": [],
      "supertype": undefined,
      "title": "Agadeem, the Undercrypt",
      "toughness": undefined,
    },
    "cardType": "sorcery",
    "colorIdentity": [
      "black",
    ],
    "cost": "{X}{B}{B}{B}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": null,
    "rarity": "mythic",
    "rulesText": "Return from your graveyard to the battlefield any number of target creature cards that each have a different mana value X or less.",
    "subtypes": [],
    "supertype": null,
    "title": "Agadeem's Awakening",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/png/front/d/4/d4d4d4d4-0004-4004-8004-000000000004.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Archangel Avacyn // Avacyn, the Purifier on m15 1`] = `
{
  "cardName": "Archangel Avacyn // Avacyn, the Purifier",
  "patch": {
    "artist_credit": "James Ryman",
    "back_face": {
      "artist_credit": "James Ryman",
      "card_type": "creature",
      "color_identity": [
        "red",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcbackleft",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying
When this creature transforms into Avacyn, the Purifier, it deals 3 damage to each other creature and each opponent.",
      "subtypes_text": "Angel",
      "supertype": "Legendary",
      "title": "Avacyn, the Purifier",
      "toughness": "5",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "5",
      "lang": "en",
      "set_code": "SOI",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{3}{W}{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_dfc_icon": "sunmoon",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "5",
      "full_art": false,
      "set": "soi",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "mythic",
    "rules_text": "Flash
Flying, vigilance
When Archangel Avacyn enters, creatures you control gain indestructible until end of turn.
When a non-Angel creature you control dies, transform Archangel Avacyn at the beginning of the next upkeep.",
    "source_scryfall_id": "a1a1a1a1-0001-4001-8001-000000000001",
    "subtypes_text": "Angel",
    "supertype": "Legendary",
    "title": "Archangel Avacyn",
    "toughness": "4",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "James Ryman",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "James Ryman",
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying
When this creature transforms into Avacyn, the Purifier, it deals 3 damage to each other creature and each opponent.",
      "subtypes": [
        "Angel",
      ],
      "supertype": "Legendary",
      "title": "Avacyn, the Purifier",
      "toughness": "5",
    },
    "cardType": "creature",
    "colorIdentity": [
      "white",
    ],
    "cost": "{3}{W}{W}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "mythic",
    "rulesText": "Flash
Flying, vigilance
When Archangel Avacyn enters, creatures you control gain indestructible until end of turn.
When a non-Angel creature you control dies, transform Archangel Avacyn at the beginning of the next upkeep.",
    "subtypes": [
      "Angel",
    ],
    "supertype": "Legendary",
    "title": "Archangel Avacyn",
    "toughness": "4",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/a/1/a1a1a1a1-0001-4001-8001-000000000001.png",
  "scryfallUri": "https://scryfall.com/card/soi/5/archangel-avacyn-avacyn-the-purifier",
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Archangel Avacyn // Avacyn, the Purifier on m15devoid 1`] = `
{
  "cardName": "Archangel Avacyn // Avacyn, the Purifier",
  "patch": {
    "artist_credit": "James Ryman",
    "back_face": {
      "artist_credit": "James Ryman",
      "card_type": "creature",
      "color_identity": [
        "red",
      ],
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "frame_style": {
        "template": "m15dfcbackleft",
      },
      "imported_art_url": null,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying
When this creature transforms into Avacyn, the Purifier, it deals 3 damage to each other creature and each opponent.",
      "subtypes_text": "Angel",
      "supertype": "Legendary",
      "title": "Avacyn, the Purifier",
      "toughness": "5",
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "5",
      "lang": "en",
      "set_code": "SOI",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{3}{W}{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) transform frame",
      "reason": null,
      "signature": "transform/2015",
      "status": "exact",
      "template": "m15dfcfront",
    },
    "frame_template": "m15dfcfront",
    "kind": "transform",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_dfc_icon": "sunmoon",
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "5",
      "full_art": false,
      "set": "soi",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "mythic",
    "rules_text": "Flash
Flying, vigilance
When Archangel Avacyn enters, creatures you control gain indestructible until end of turn.
When a non-Angel creature you control dies, transform Archangel Avacyn at the beginning of the next upkeep.",
    "source_scryfall_id": "a1a1a1a1-0001-4001-8001-000000000001",
    "subtypes_text": "Angel",
    "supertype": "Legendary",
    "title": "Archangel Avacyn",
    "toughness": "4",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "James Ryman",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "James Ryman",
      "card_type": "creature",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": "6",
      "rules_text": "Flying
When this creature transforms into Avacyn, the Purifier, it deals 3 damage to each other creature and each opponent.",
      "subtypes": [
        "Angel",
      ],
      "supertype": "Legendary",
      "title": "Avacyn, the Purifier",
      "toughness": "5",
    },
    "cardType": "creature",
    "colorIdentity": [
      "white",
    ],
    "cost": "{3}{W}{W}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15devoid",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "mythic",
    "rulesText": "Flash
Flying, vigilance
When Archangel Avacyn enters, creatures you control gain indestructible until end of turn.
When a non-Angel creature you control dies, transform Archangel Avacyn at the beginning of the next upkeep.",
    "subtypes": [
      "Angel",
    ],
    "supertype": "Legendary",
    "title": "Archangel Avacyn",
    "toughness": "4",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/a/1/a1a1a1a1-0001-4001-8001-000000000001.png",
  "scryfallUri": "https://scryfall.com/card/soi/5/archangel-avacyn-avacyn-the-purifier",
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Beanstalk Giant // Fertile Footsteps on m15 1`] = `
{
  "cardName": "Beanstalk Giant // Fertile Footsteps",
  "patch": {
    "artist_credit": "Jason A. Engle",
    "back_face": {
      "artist_credit": "Jason A. Engle",
      "card_type": "sorcery",
      "cost": "{2}{G}",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Search your library for a basic land card, put it onto the battlefield, then shuffle.",
      "subtypes_text": "Adventure",
      "supertype": undefined,
      "title": "Fertile Footsteps",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "165",
      "lang": "en",
      "set_code": "ELD",
    },
    "color_identity": [
      "green",
    ],
    "color_pair": undefined,
    "cost": "{6}{G}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "Adventure frame",
      "reason": null,
      "signature": "layout/2015",
      "status": "exact",
      "template": "adventure",
    },
    "frame_template": undefined,
    "kind": "adventure",
    "loyalty": undefined,
    "power": "*",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "165",
      "full_art": false,
      "set": "eld",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "uncommon",
    "rules_text": "Beanstalk Giant's power and toughness are each equal to the number of lands you control.",
    "source_scryfall_id": "a7a7a7a7-0007-4007-8007-000000000007",
    "subtypes_text": "Giant",
    "supertype": undefined,
    "title": "Beanstalk Giant",
    "toughness": "*",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Jason A. Engle",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Jason A. Engle",
      "card_type": "sorcery",
      "cost": "{2}{G}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Search your library for a basic land card, put it onto the battlefield, then shuffle.",
      "subtypes": [
        "Adventure",
      ],
      "supertype": undefined,
      "title": "Fertile Footsteps",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "green",
    ],
    "cost": "{6}{G}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "*",
    "rarity": "uncommon",
    "rulesText": "Beanstalk Giant's power and toughness are each equal to the number of lands you control.",
    "subtypes": [
      "Giant",
    ],
    "supertype": null,
    "title": "Beanstalk Giant",
    "toughness": "*",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/a/7/a7a7a7a7-0007-4007-8007-000000000007.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Bonecrusher Giant // Stomp on adventure 1`] = `
{
  "cardName": "Bonecrusher Giant // Stomp",
  "patch": {
    "artist_credit": "Victor Adame Minguez",
    "back_face": {
      "artist_credit": "Victor Adame Minguez",
      "card_type": "instant",
      "cost": "{1}{R}",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Damage can't be prevented this turn. Stomp deals 2 damage to any target.",
      "subtypes_text": "Adventure",
      "supertype": undefined,
      "title": "Stomp",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": {
      "collector_number": null,
      "lang": "en",
      "set_code": "ELD",
    },
    "color_identity": [
      "red",
    ],
    "color_pair": undefined,
    "cost": "{2}{R}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "4.10",
      "exactLabel": "Adventure frame ()",
      "reason": "PipGlyph's layout frames are M15-era",
      "signature": "layout/older",
      "status": "nearest",
      "template": "adventure",
    },
    "frame_template": undefined,
    "kind": "adventure",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "off",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": null,
      "full_art": false,
      "set": "eld",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "rare",
    "rules_text": "Whenever Bonecrusher Giant becomes the target of a spell, Bonecrusher Giant deals 2 damage to that spell's controller.",
    "source_scryfall_id": "09fd2d9c-1793-4beb-a3fb-7a869f660cd4",
    "subtypes_text": "Giant",
    "supertype": undefined,
    "title": "Bonecrusher Giant",
    "toughness": "3",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Victor Adame Minguez",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Victor Adame Minguez",
      "card_type": "instant",
      "cost": "{1}{R}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Damage can't be prevented this turn. Stomp deals 2 damage to any target.",
      "subtypes": [
        "Adventure",
      ],
      "supertype": undefined,
      "title": "Stomp",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "red",
    ],
    "cost": "{2}{R}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "adventure",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "rare",
    "rulesText": "Whenever Bonecrusher Giant becomes the target of a spell, Bonecrusher Giant deals 2 damage to that spell's controller.",
    "subtypes": [
      "Giant",
    ],
    "supertype": null,
    "title": "Bonecrusher Giant",
    "toughness": "3",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/0/9/09fd2d9c-1793-4beb-a3fb-7a869f660cd4.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Fire // Ice on split 1`] = `
{
  "cardName": "Fire // Ice",
  "patch": {
    "artist_credit": "David Martin",
    "back_face": {
      "artist_credit": "Franz Vohwinkel",
      "card_type": "instant",
      "cost": "{1}{U}",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Tap target permanent.
Draw a card.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Ice",
      "toughness": undefined,
    },
    "card_type": "instant",
    "collector": {
      "collector_number": "215",
      "lang": "en",
      "set_code": "DMR",
    },
    "color_identity": [
      "multicolor",
    ],
    "color_pair": "ur",
    "cost": "{1}{R}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "4.10",
      "exactLabel": "Split frame ()",
      "reason": "PipGlyph's layout frames are M15-era",
      "signature": "layout/older",
      "status": "nearest",
      "template": "split",
    },
    "frame_template": undefined,
    "kind": "split",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "off",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "215",
      "full_art": false,
      "set": "dmr",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "uncommon",
    "rules_text": "Fire deals 2 damage divided as you choose among one or two targets.",
    "source_scryfall_id": "2a1a9a4d-3c1b-4ae6-9a0e-7b0a2cf4d0a1",
    "subtypes_text": undefined,
    "supertype": undefined,
    "title": "Fire",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "David Martin",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Franz Vohwinkel",
      "card_type": "instant",
      "cost": "{1}{U}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "Tap target permanent.
Draw a card.",
      "subtypes": [],
      "supertype": undefined,
      "title": "Ice",
      "toughness": undefined,
    },
    "cardType": "instant",
    "colorIdentity": [
      "blue",
      "red",
    ],
    "cost": "{1}{R}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "split",
    },
    "loyalty": null,
    "power": null,
    "rarity": "uncommon",
    "rulesText": "Fire deals 2 damage divided as you choose among one or two targets.",
    "subtypes": [],
    "supertype": null,
    "title": "Fire",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/png/front/2/a/2a1a9a4d-3c1b-4ae6-9a0e-7b0a2cf4d0a1.png",
  "scryfallUri": "https://scryfall.com/card/dmr/215/fire-ice",
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Invasion of Gobakhan // Lightshield Array on battle 1`] = `
{
  "cardName": "Invasion of Gobakhan // Lightshield Array",
  "patch": {
    "artist_credit": undefined,
    "back_face": {
      "artist_credit": undefined,
      "card_type": "enchantment",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "At the beginning of your end step, put a +1/+1 counter on each creature that attacked this turn.",
      "subtypes_text": undefined,
      "supertype": undefined,
      "title": "Lightshield Array",
      "toughness": undefined,
    },
    "card_type": "battle",
    "collector": {
      "collector_number": null,
      "lang": "en",
      "set_code": "MOM",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{1}{W}",
    "defense": "3",
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "Unknown frame",
      "reason": "Scryfall reports a frame PipGlyph doesn't know",
      "signature": "unknown-frame",
      "status": "nearest",
      "template": "battle",
    },
    "frame_template": "battle",
    "kind": "battle",
    "loyalty": undefined,
    "power": undefined,
    "preview_art_url": null,
    "printed_collector": "off",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": null,
      "full_art": false,
      "set": "mom",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "rare",
    "rules_text": "(As a Siege enters, choose an opponent to protect it.)",
    "source_scryfall_id": "11798730-6788-4e0b-a828-b46cab1a4fa7",
    "subtypes_text": "Siege",
    "supertype": undefined,
    "title": "Invasion of Gobakhan",
    "toughness": undefined,
  },
  "preview": {
    "artUrl": null,
    "artistCredit": null,
    "backFace": {
      "art_url": undefined,
      "artist_credit": undefined,
      "card_type": "enchantment",
      "cost": "",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "At the beginning of your end step, put a +1/+1 counter on each creature that attacked this turn.",
      "subtypes": [],
      "supertype": undefined,
      "title": "Lightshield Array",
      "toughness": undefined,
    },
    "cardType": "battle",
    "colorIdentity": [
      "white",
    ],
    "cost": "{1}{W}",
    "defense": "3",
    "flavorText": null,
    "frameStyle": {
      "template": "battle",
    },
    "loyalty": null,
    "power": null,
    "rarity": "rare",
    "rulesText": "(As a Siege enters, choose an opponent to protect it.)",
    "subtypes": [
      "Siege",
    ],
    "supertype": null,
    "title": "Invasion of Gobakhan",
    "toughness": null,
  },
  "scanUrl": "https://cards.scryfall.io/png/front/1/1/11798730-6788-4e0b-a828-b46cab1a4fa7.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Serra Angel on m15 1`] = `
{
  "cardName": "Serra Angel",
  "patch": {
    "artist_credit": "Greg Staples",
    "back_face": undefined,
    "card_type": "creature",
    "collector": {
      "collector_number": "33",
      "lang": "en",
      "set_code": "M15",
    },
    "color_identity": [
      "white",
    ],
    "color_pair": undefined,
    "cost": "{3}{W}{W}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "exactLabel": "M15 (2015) frame",
      "reason": null,
      "signature": "era/2015",
      "status": "exact",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": undefined,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "33",
      "full_art": false,
      "set": "m15",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "uncommon",
    "rules_text": "Flying, vigilance",
    "source_scryfall_id": "f6f6f6f6-0006-4006-8006-000000000006",
    "subtypes_text": "Angel",
    "supertype": undefined,
    "title": "Serra Angel",
    "toughness": "4",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Greg Staples",
    "backFace": null,
    "cardType": "creature",
    "colorIdentity": [
      "white",
    ],
    "cost": "{3}{W}{W}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "uncommon",
    "rulesText": "Flying, vigilance",
    "subtypes": [
      "Angel",
    ],
    "supertype": null,
    "title": "Serra Angel",
    "toughness": "4",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/f/6/f6f6f6f6-0006-4006-8006-000000000006.png",
  "scryfallUri": "https://scryfall.com/card/m15/33/serra-angel",
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Tergrid, God of Fright // Tergrid's Lantern on m15 1`] = `
{
  "cardName": "Tergrid, God of Fright // Tergrid's Lantern",
  "patch": {
    "artist_credit": "Yongjae Choi",
    "back_face": {
      "artist_credit": "Yongjae Choi",
      "card_type": "artifact",
      "cost": "{3}{B}",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Target player loses 3 life unless they sacrifice a nonland permanent or discard a card.
{3}{B}: Untap Tergrid's Lantern.",
      "subtypes_text": undefined,
      "supertype": "Legendary",
      "title": "Tergrid's Lantern",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "110",
      "lang": "en",
      "set_code": "KHM",
    },
    "color_identity": [
      "black",
    ],
    "color_pair": undefined,
    "cost": "{3}{B}{B}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.1b",
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": "PipGlyph's modal double-faced frames aren't built yet",
      "signature": "modal/2015/pending",
      "status": "nearest",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "110",
      "full_art": false,
      "set": "khm",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "rare",
    "rules_text": "Menace
Whenever an opponent sacrifices a nontoken permanent or discards a permanent card, you may put that card from a graveyard onto the battlefield under your control.",
    "source_scryfall_id": "b2b2b2b2-0002-4002-8002-000000000002",
    "subtypes_text": "God",
    "supertype": "Legendary",
    "title": "Tergrid, God of Fright",
    "toughness": "5",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Yongjae Choi",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Yongjae Choi",
      "card_type": "artifact",
      "cost": "{3}{B}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Target player loses 3 life unless they sacrifice a nonland permanent or discard a card.
{3}{B}: Untap Tergrid's Lantern.",
      "subtypes": [],
      "supertype": "Legendary",
      "title": "Tergrid's Lantern",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "black",
    ],
    "cost": "{3}{B}{B}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "rare",
    "rulesText": "Menace
Whenever an opponent sacrifices a nontoken permanent or discards a permanent card, you may put that card from a graveyard onto the battlefield under your control.",
    "subtypes": [
      "God",
    ],
    "supertype": "Legendary",
    "title": "Tergrid, God of Fright",
    "toughness": "5",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/b/2/b2b2b2b2-0002-4002-8002-000000000002.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Tergrid, God of Fright // Tergrid's Lantern on m15borderless 1`] = `
{
  "cardName": "Tergrid, God of Fright // Tergrid's Lantern",
  "patch": {
    "artist_credit": "Yongjae Choi",
    "back_face": {
      "artist_credit": "Yongjae Choi",
      "card_type": "artifact",
      "cost": "{3}{B}",
      "defense": undefined,
      "flavor_text": undefined,
      "imported_art_url": null,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Target player loses 3 life unless they sacrifice a nonland permanent or discard a card.
{3}{B}: Untap Tergrid's Lantern.",
      "subtypes_text": undefined,
      "supertype": "Legendary",
      "title": "Tergrid's Lantern",
      "toughness": undefined,
    },
    "card_type": "creature",
    "collector": {
      "collector_number": "110",
      "lang": "en",
      "set_code": "KHM",
    },
    "color_identity": [
      "black",
    ],
    "color_pair": undefined,
    "cost": "{3}{B}{B}",
    "defense": undefined,
    "dropped_face": undefined,
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.1b",
      "exactLabel": "M15 (2015) modal double-faced frame",
      "reason": "PipGlyph's modal double-faced frames aren't built yet",
      "signature": "modal/2015/pending",
      "status": "nearest",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": "4",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "110",
      "full_art": false,
      "set": "khm",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "rare",
    "rules_text": "Menace
Whenever an opponent sacrifices a nontoken permanent or discards a permanent card, you may put that card from a graveyard onto the battlefield under your control.",
    "source_scryfall_id": "b2b2b2b2-0002-4002-8002-000000000002",
    "subtypes_text": "God",
    "supertype": "Legendary",
    "title": "Tergrid, God of Fright",
    "toughness": "5",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Yongjae Choi",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Yongjae Choi",
      "card_type": "artifact",
      "cost": "{3}{B}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": undefined,
      "power": undefined,
      "rules_text": "{T}: Target player loses 3 life unless they sacrifice a nonland permanent or discard a card.
{3}{B}: Untap Tergrid's Lantern.",
      "subtypes": [],
      "supertype": "Legendary",
      "title": "Tergrid's Lantern",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "black",
    ],
    "cost": "{3}{B}{B}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15borderless",
    },
    "loyalty": null,
    "power": "4",
    "rarity": "rare",
    "rulesText": "Menace
Whenever an opponent sacrifices a nontoken permanent or discards a permanent card, you may put that card from a graveyard onto the battlefield under your control.",
    "subtypes": [
      "God",
    ],
    "supertype": "Legendary",
    "title": "Tergrid, God of Fright",
    "toughness": "5",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/b/2/b2b2b2b2-0002-4002-8002-000000000002.png",
  "scryfallUri": null,
}
`;

exports[`buildFrameComparePayload(id, template) — the front path, as before 5.0b > Valki, God of Lies // Tibalt, Cosmic Impostor on m15 1`] = `
{
  "cardName": "Valki, God of Lies // Tibalt, Cosmic Impostor",
  "patch": {
    "artist_credit": "Yongjae Choi",
    "back_face": undefined,
    "card_type": "creature",
    "collector": {
      "collector_number": "114",
      "lang": "en",
      "set_code": "KHM",
    },
    "color_identity": [
      "black",
    ],
    "color_pair": undefined,
    "cost": "{1}{B}",
    "defense": undefined,
    "dropped_face": "walker-face",
    "flavor_text": undefined,
    "frame_match": {
      "blockedBy": "5.13",
      "exactLabel": "Double-faced planeswalker",
      "reason": "PipGlyph's double-faced planeswalker frames aren't built yet — the front face imports on its own",
      "signature": "dfc/walker",
      "status": "nearest",
      "template": "m15",
    },
    "frame_template": "m15",
    "kind": "creature",
    "loyalty": undefined,
    "power": "2",
    "preview_art_url": null,
    "printed_collector": "2023",
    "printed_crown": false,
    "printed_stamp": "none",
    "printed_star": undefined,
    "printed_two_color": undefined,
    "printing": {
      "border_color": null,
      "collector_number": "114",
      "full_art": false,
      "set": "khm",
      "textless": false,
    },
    "printing_detail": undefined,
    "printing_treatment": undefined,
    "rarity": "mythic",
    "rules_text": "When Valki, God of Lies enters, each opponent reveals their hand. For each opponent, exile a creature card they revealed this way until Valki leaves the battlefield.",
    "source_scryfall_id": "c3c3c3c3-0003-4003-8003-000000000003",
    "subtypes_text": "God",
    "supertype": "Legendary",
    "title": "Valki, God of Lies",
    "toughness": "1",
  },
  "preview": {
    "artUrl": null,
    "artistCredit": "Yongjae Choi",
    "backFace": {
      "art_url": undefined,
      "artist_credit": "Yongjae Choi",
      "card_type": "planeswalker",
      "cost": "{5}{B}{R}",
      "defense": undefined,
      "flavor_text": undefined,
      "loyalty": "5",
      "power": undefined,
      "rules_text": "As Tibalt, Cosmic Impostor enters, you get an emblem with "You may play cards exiled with Tibalt, Cosmic Impostor."
+2: Exile the top card of each player's library.
−3: Exile target artifact or creature.
−8: Exile all cards from all opponents' graveyards.",
      "subtypes": [
        "Tibalt",
      ],
      "supertype": "Legendary",
      "title": "Tibalt, Cosmic Impostor",
      "toughness": undefined,
    },
    "cardType": "creature",
    "colorIdentity": [
      "black",
    ],
    "cost": "{1}{B}",
    "defense": null,
    "flavorText": null,
    "frameStyle": {
      "template": "m15",
    },
    "loyalty": null,
    "power": "2",
    "rarity": "mythic",
    "rulesText": "When Valki, God of Lies enters, each opponent reveals their hand. For each opponent, exile a creature card they revealed this way until Valki leaves the battlefield.",
    "subtypes": [
      "God",
    ],
    "supertype": "Legendary",
    "title": "Valki, God of Lies",
    "toughness": "1",
  },
  "scanUrl": "https://cards.scryfall.io/png/front/c/3/c3c3c3c3-0003-4003-8003-000000000003.png",
  "scryfallUri": null,
}
`;
